# Hands-On-AI-Engineering

./: README.md
ai_agents/email_auto_responder/: .env.example  README.md  app.py  crew.py  email_utils.py  flow.py  requirements.txt
ai_agents/research_assistant_with_memory/: .env.example  .gitignore  README.md  app.py  docker-compose.yml  pyproject.toml
ai_agents/research_assistant_with_memory/.streamlit/: config.toml
ai_agents/research_assistant_with_memory/data/: paper_dense_passage_retrieval.md  paper_hybrid_retrieval_augmented_generation.md  vectorai_operations_manual.txt  webinar_evaluating_rag_systems.srt
ai_agents/research_assistant_with_memory/research_assistant/: __init__.py  agents.py  config.py  embedder.py  evaluation.py  graph.py  ingest.py  llm.py  memory.py  observability.py  tools.py  vectorstore.py
ai_agents/research_assistant_with_memory/scripts/: ingest_docs.py
audio/customer_support_voice_agent/: .env.example  README.md  demo.html  main.py  pyproject.toml
fine_tuning/text_to_sql_inventory/: .env.example  .gitignore  README.md  app.py  database.py  inference.py  prepare_dataset.py  requirements.txt  train.ipynb
fine_tuning/text_to_sql_inventory/data/: dataset.jsonl
